# HR-Document-Archive

./: .gitignore  README.md  contract.txt  pyproject.toml
app/: config.py  main.py
app/api/: auth.py  documents.py
app/auth/: jwt.py  password.py
app/core/: document.py  validator.py
app/db/: database.py
app/models/: document.py  user.py
documents/: agreement.txt  contract.txt  policy.txt
uploads/: 3dea0114-015d-45e8-917a-008b69bdeda6.txt  99f5cb15-961e-4d32-8239-d0d3bc5ca446.txt  fdf3e74f-f5bf-47ea-9f52-272a4e7538e3.txt
