[project]
name = "hr-docs-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.0",
    "motor>=3.7.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.2",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "uvicorn[standard]>=0.37.0",
]
